Añadido CNAME lagalgamaker.com

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <main>
-        <h1>En construcción</h1>  
+        <h1>La Galga Maker está en construcción</h1>  
     </main>
   </body>
 </html>
