--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <style>
+      main {
+        place-items: center;
+        display: grid;
+      }
+    </style>
     <title>La Galga Maker</title>
   </head>
   <body>
     <main>
+        <img src="./img/lagalga.jpg" />
         <h1>La Galga Maker está en construcción</h1>  
     </main>
   </body>
