--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <main>
-        <img src="./img/lagalga.svg" />
+        <img src="./img/lagalga.jpg" />
         <h1>La Galga Maker está en construcción</h1>  
     </main>
   </body>
